# human-net

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  mcp.json
.codex/: settings.yaml
.codex/tasks/: m1_id_network.yaml  m2_units_views.yaml  m3_publish_contracts.yaml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
cli/: Cargo.toml
cli/src/: home.rs  lib.rs  main.rs  output.rs
cli/src/contract/: mod.rs
cli/src/discovery/: dht.rs  mod.rs
cli/src/doc/: mod.rs
cli/src/event/: mod.rs
cli/src/identity/: bundle.rs  did.rs  mod.rs  proof.rs  storage.rs  verification.rs
cli/src/plan/: mod.rs
cli/src/policy/: mod.rs
cli/src/services/: discovery.rs  federation.rs  mod.rs  relay.rs
cli/src/shard/: mod.rs
cli/src/sync/: mod.rs
cli/src/trust/: mod.rs
cli/tests/: backup.rs  contract_chain.rs  dht_cache_fallback.rs  federation.rs  identity_verification.rs  relay.rs  trust_graph.rs
docs/: m4-s4.md  recovery.md
docs/api/: openapi.yaml
docs/deploy/: federation-profile.md  mcp-local.md  mcp-synology.md
docs/design/: gc-policy.md  threat-model.md
docs/m3/: Alice_Bob_Contract_Chain.md
docs/spec/: doc@1.md  id@1.md  policy@1.md  snapshot@1.md  state@1_pricing.md  view@1.md
planning/: M3_IMPLEMENTATION_PLAN.md  MILESTONES_M1-M4_MVP_CORE.md  ROADMAP_M1-M4_MVP_CORE.md  VALUES_AND_NORTHSTAR.md
planning/implementation/: M4_IMPLEMENTATION_PLAN.md  M5_IMPLEMENTATION_PLAN.md
planning/roadmap/: ROADMAP_M1-M4_MVP_CORE.md  ROADMAP_MVP_CORE.md
planning/usecases/: _common_workflows.md  creator_micropay.md  mini-jobs.md  party-meet.md  skill-exchange.md  voting.md
planning/valus and northstar/: VALUES_AND_NORTHSTAR.md
runtime/: rule-grammar.md
runtime/schemas/: README.md  doc@1.json  file@1.json  note@1.json
runtime/storage/: README.md
samples/csv/: README.md
services/discovery/: Cargo.toml  README.md
services/discovery/src/: dht.rs  http_api.rs  main.rs  mdns.rs  peer_table.rs  types.rs
services/mcp/: Cargo.toml  README.md
services/mcp/src/: backup.rs  federation.rs  lib.rs  relay.rs  storage.rs  trust.rs  types.rs
spec/: backup@1.md  contract@1.md  contract@1_fsm.md  dht_hint@1.md  event@1.md  id@1.md  id@2.md  index@2.md  materialization@1.md  offer@1.md  plan@1.md  policy@1.md  presence@2.md  proof@1.md  receipt@1.md  reputation@1.md  shard@1.md  snapshot@1.md  state@1_inventory.md  trust_link@1.md  unit@1.md  view@1.md
(+18 files in other folders)
