[package]
name = "hn-cli"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
blake3 = "1.5"
bs58 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
clap = { version = "4.5.1", features = ["derive"] }
dialoguer = "0.11"
dirs = "5.0"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
once_cell = "1.19"
rand = "0.8"
rand_chacha = "0.3"
rpassword = "7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
nix = { version = "0.27", default-features = false, features = ["signal"] }
ureq = { version = "2.9", features = ["json"] }
tempfile = "3.10"
uuid = { version = "1.10", features = ["v4", "serde"] }
