[package]
name = "hn-discovery"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
flume = "0.11"
hn-cli = { path = "../../cli" }
hostname = "0.3"
mdns-sd = "0.10"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
libp2p = { version = "0.54", default-features = false, features = ["tcp", "dns", "identify", "kad", "tokio", "noise", "yamux", "macros"] }
multiaddr = "0.18"
rand = "0.8"
serde_jcs = "0.1"
toml = "0.8"
web-time = "0.2"
