[package]
name = "hn-mcp"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
blake3 = "1.5"
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
ed25519-dalek = { version = "2.1", features = ["serde"] }
serde_jcs = "0.1"
time = { version = "0.3", features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
bs58 = "0.5"
